Fix: Asset not showing if no assigned tasks

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -44,16 +44,15 @@ i:hover {
   border: 1px solid #B5B5B5;
 }
 
-.Tabs {
+.TabStyle {
   background-color: #613FE5;
   color: #F6F6F7;
   border: 1px #120E16 solid !important;
 }
 
-.Tabs.active {
-  background-color: #00ff22 !important;
-  color: #120E16 !important;
-  border: 1px #120E16 solid !important;
+.TabStyle .nav-item.show .nav-link,
+.TabStyle .nav-link.active {
+  color: red !important;
 }
 
 .Button {
@@ -89,14 +88,6 @@ i:hover {
 .BoxBorder {
   border: #120E16 1px solid;
 }
-
-/* .nav-tabs > li.active > a {
-  color: #3cff00;
-  font-size: 16px;
-}
-.nav-tabs > li > a {
-  color: #000000;
-} */
 
 .AutoMargin {
   margin: auto;
